# SLabStock

./: .gitignore  .gitmodules  CMakeLists.txt  DevopsUserPresets.json  README.md  conanfile.py  conanprofile  devopsfile.py  devopsprofile.json  requirements.txt  run_conan.py  test.html  test.py
CMakeModules/: SLabStockConfigureBuildPaths.cmake  SLabStockVariables.cmake
TA/: technical_analysis_example.py
TA/mail_service/: mailfactory.py
TA/technical_analysis/: company_indicators.py  mail.py  price_delta.py  rsi.py
Tools/ypyTA/: output_price_info.html  setup.py  yfinance.cache
Tools/ypyTA/examples/: usage.py
Tools/ypyTA/templates/html/: priceinfotable.html
Tools/ypyTA/tests/: test_stockinfo.py
Tools/ypyTA/tests/system_tests/: test_systemcomponents.py
Tools/ypyTA/ypyTA/: htmlviewer.py  stockdata.py  techanalysis.py  yfinancehelper.py
cmake/: configuration.cmake  projectvars.cmake
cpyTa/: CMakeLists.txt  cpyta.py  stockanalyzer.cpp  stockanalyzer.h  stockinfofacade.cpp  stockinfofacade.h  stockmapfacade.cpp  stockmapfacade.h
cpyTa/protobuf/: stock_info.proto  stock_map.proto  ta_notification.proto
cpyTa/protobuf/cpp/: stock_info.pb.cc  stock_info.pb.h  stock_map.pb.cc  stock_map.pb.h
cpyTa/protobuf/py/: stock_info_pb2.py  stock_map_pb2.py
cpyTa/python/: output_email.html
cpyTa/python/stockTA/: README.md
cpyTa/python/stockTA/stockTA/: analyzer.py  stockanalytics.py  stockinfo.py  stockinfocollector.py  types.py
cpyTa/python/stockTA/tests/: test_stockinfo.py  test_stockinfocollector.py
database/: db_command.py  db_connector.py  db_factory.py  isin_mapping.json  sbroker_test.csv  sbroker_test2.csv  sbrokerparser.py  slab_sqlDB_command.py  slab_sqlDB_connector.py  slab_sqlDB_isinparser.py  slab_sqlDB_operations.py  slab_sqlDB_reset.py  slab_sqlDB_sbrokerparser.py  slabstock_db_config.json
database/archive_sbroker/: init.csv
extra/: README.md
extra/examples/sbroker/: Transaktionsuebersicht_zu_Depot_7173642002_vom_20240407_1303.csv  Transaktionsuebersicht_zu_Depot_7173642002_vom_20240407_1303.json  csv_parser.py
extra/knowledge/: concepts.md  technicalAnalysis.md
extra/slabstockclass/: class.cpp  class.h  wizard.xml
extra/slabstocktestsuite/: test.cpp  wizard.xml
libcpymail/: CMakeLists.txt  address.cpp  address.h  attachment.cpp  attachment.h  cpymail.py  imailagent.h  mail.cpp  mail.h  mailagent.cpp  mailagent.h
libcpymail/protobuf/: mailsettings.pb.cc  mailsettings.pb.h  mailsettings.proto  mailsettings_pb2.py
libcpymail/python/mail_services/mailservices/: envvv  mailagent.py  settings.py  utility.py
libcpymail/python/mail_services/mailservices/protobuf/: maildictionary_pb2.py
libslabstock/: CMakeLists.txt
libslabstock/application/: stockcrawler.cpp  stockcrawler.h
libslabstock/database/: connector.cpp  connector.h  databaseaccessbuilder.h  idatabaseaccess.cpp  idatabaseaccess.h  isinmapping.cpp  isinmapping.h  sqlclient.cpp  sqlclient.h  sqlcommand.cpp  sqlcommand.h  sqldatabase.cpp  sqldatabase.h  sqldatabaseaccess.cpp  sqldatabaseaccess.h  sqldriverfactory.h  sqltable.cpp  sqltable.h  types.h
libslabstock/simulation/: callback.cpp  callback.h  clearsimulationcallback.cpp  clearsimulationcallback.h  dummyprocess.cpp  dummyprocess.h  event.cpp  event.h  finalize.cpp  finalize.h  initialize.cpp  initialize.h  interrupt.cpp  interrupt.h  process.cpp  process.h  processfinalizecallback.cpp  processfinalizecallback.h  processinitializecallback.cpp  processinitializecallback.h  processinterruptcallback.cpp  processinterruptcallback.h  processresumecallback.cpp  processresumecallback.h  realtimesimulation.cpp  realtimesimulation.h  simulation.cpp  simulation.h  simulationbase.cpp  simulationbase.h  simulationsignaler.cpp  simulationsignaler.h  timeout.cpp  timeout.h
libslabstock/utility/: basictypes.h  pythoncontroller.cpp  pythoncontroller.h
scripts/: technical_analysis_example.py  webscraper.py
tests/: CMakeLists.txt  main.cpp  testbase.cpp  testbase.h
tests/integration/: stockcrawlertests.cpp
tests/libslabstock/: simulationtests.cpp
tests/libslabstock/database/: dbconnectortests.cpp  dbservicetests.cpp  sqlcommandtests.cpp
tests/libslabstock/database/mocks/: mariadbconnectormocks.h  mariadbsqlconnectionmock.h  mariadbsqldrivermock.h  mariadbsqlstatementmock.h  sqldriverfactorymock.h
tests/libslabstock/simulation/: simulationtests.cpp
tests/python_scripts/examples/: helloworld.py
tests/simpy_examples/: README.md  simpyexample1_car.cpp  simpyexample2_realtimecar.cpp  simpyexample3_chargingcar.cpp  simpyexample4_cardriver.cpp  simpyexample_car.cpp  simpyexample_realtimecar.cpp
